# youmirror-py

./: .gitignore  AGENTS.md  LICENSE  PLAN.md  README.md  TODO.md  demo.py  example.json  json_to_toml.ipynb  justfile  pyproject.toml  requirements.txt  settings.ini  setup.py  test.ipynb  todo.txt  youmirror.json  youmirror.toml  youtube.ipynb
.github/workflows/: python-app.yml
mymirror/: youmirror.json
notebooks/: configurer.ipynb  core.ipynb  databaser.ipynb  downloader.ipynb  filer.ipynb  printer.ipynb  pytube.ipynb  tuber.ipynb
pytube/: captions.py
tests/: test.db  test_configurer.ipynb  test_configurer.py  test_core.ipynb  test_core.py  test_databaser.ipynb  test_downloader.ipynb  test_helper.ipynb  test_parser.ipynb  youmirror
tests/testmirror/: test.db  youmirror.db  youmirror.toml
youmirror/: cli.py  configurer.py  core.py  databaser.py  downloader.py  filer.py  fixer.py  helper.py  main.py  parse.py  parser.py  printer.py  template.py  tuber.py
youmirror/pytube/: __init__.py  __main__.py  captions.py  cipher.py  cli.py  extract.py  helpers.py  innertube.py  parser.py  query.py  request.py  streams.py
youmirror/pytube/contrib/: channel.py  playlist.py  search.py
