[tool.poetry]
name = "youmirror"
version = "0.6.0"
description = "Create a mirror filetree of your favorite youtube videos"
authors = ["wkrettek <warrenkrettek@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/wkrettek/youmirror"

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.4.1"
sqlitedict = "2.0.0"
toml = "^0.10.2"
pytube = {git = "https://github.com/wkrettek/pytube"}

[tool.poetry.scripts]
youmirror = 'youmirror.cli:main'


[tool.poetry.dev-dependencies]
ipykernel = "^6.13.0"
black = "^22.3.0"
pytest = "^7.1.2"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
