[project]
name = "youmirror"
version = "0.5.1"
description = "Create a mirror filetree of your favorite youtube videos"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "pytube",
    "sqlitedict==2.0.0",
    "tomlkit==0.13.3",
    "typer==0.15.4",
    "yt-dlp==2025.6.30",
]

[project.scripts]
youmirror = "youmirror.cli:main"

[dependency-groups]
dev = [
    "pytest==8.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
pytube = { git = "https://github.com/wkrettek/pytube" }
